<resources>
    <string name="app_name" translation_description="Application Title">Sky Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="set" translation_description="Button label. Set the date to the given value">Set</string>
    <string name="go">Go!</string>
    <string name="other_prefs">Other</string>
    <string name="location_prefs">Location Settings</string>
    <string name="force_gps_pref">Always use GPS</string>
    <string name="force_gps_pref_hint" translation_description="this string continues from \'Always use GPS\'">if enabled, even if network location is available</string>
    <string name="no_use_gps_pref">Set location manually</string>
    <string name="no_use_gps_pref_hint">Enter a place or a lat/long below</string>
    <string name="location_placename">Place name</string>
    <string name="location_placename_hint" translation_description="An example address.  Translators: please pick an address suitable for your country.  If it has an astronomical connection (e.g. the address of an observatory or famous astronomer) then that would be even better.">e.g. 1400 West Mars Hill Road, Flagstaff, AZ.</string>
    <string name="location_lat_pref">Latitude</string>
    <string name="location_long_pref">Longitude</string>
    <string name="degrees" translation_description="angular degrees">Degrees</string>
    <string name="preferences">preferences</string>
    <string name="location_offer_to_enable">Auto-location is disabled.  Would you like to enable it?</string>
    <string name="location_offer_to_enable_gps_title">Auto-location disabled</string>
    <string name="location_permission_dialog_title">Location Required</string>
    <string name="location_permission_dialog_message">Sky Map needs your approximate location to show the correct night sky. You can grant permission, enter your location manually, or decide later. If you decide later, the map will not be accurate until your location has been set.</string>
    <string name="location_permission_grant">Grant Permission</string>
    <string name="location_permission_enter_manually">Enter Manually</string>
    <string name="location_permission_later">Later</string>
    <string name="location_set_auto">Location set to %2$s</string>
    <string name="location_unable_to_geocode">Unable to decode your location - perhaps your network isn\'t available?</string>
    <string name="location_not_found_title" translation_description="dialog box title when location not found">Sorry</string>
    <string name="location_not_found" translation_description="dialog message when placename not found">%s not found.</string>
    <string name="location_long_lat">Longitude:%1$.2f, Latitude:%2$.2f</string>
    <string name="location_place_found">Place found.  Setting latitude %1$f and longitude %2$f</string>
    <string name="use_magnetic_correction">Use magnetic correction</string>
    <string name="use_magnetic_correction_hint">Use knowledge of your location to correct orientation from magnetic north to true north</string>
    <string name="provider_prefs" translation_description="Dialog box title for a preferences dialog">Show...</string>
    <string name="show_stars_pref">Stars</string>
    <string name="show_constellations_pref">Constellations</string>
    <string name="show_messier_objects_pref" translation_description="The celestial objects catalogued by Charles Messier">Messier Objects</string>
    <string name="show_planets_pref">Solar System</string>
    <string name="show_grid_pref">RA/Dec Grid</string>
    <string name="show_horizon_pref">Horizon</string>
    <string name="show_sky_gradient" translation_description="This is a shading of the color of the sky used for effect">Sky Gradient</string>
    <string name="show_meteors_pref">Meteor Showers</string>
    <string name="show_comet_layer_pref">Comets</string>
    <string name="show_satellite_layer_pref" translation_description="The layer for satellites">Satellites</string>
    <string name="show_hubble_layer_pref">Hubble Images</string>
    <string name="sensor_prefs">Sensor Settings (experts)</string>
    <string name="sensor_speed" translation_description="Old, non gyro sensors only: How quickly the sensor should send us data">Sensor Speed</string>
    <string name="sensor_damping" translation_description="Old, non gyro sensors only: The amount of smoothing applied to the sensor outputs.">Damping</string>
    <string name="appearance_prefs"
        translation_description="Preferences title for section about app appearance">Appearance
    </string>
    <string name="auto_dimness_preference"
        translation_description="Mode for automatically dimming the screen when night mode is selected">
        Auto screen dimming</string>
    <string name="font_size_preference"
        translation_description="Change the font size">
        Font size</string>
    <string name="font_size_preference_description"
        translation_description="help to go along with the change font size preference">Adjust
        label text size</string>
    <string name="ecliptic">Ecliptic</string>
    <string name="eclipse24">Eclipse path 2024-04-08</string>
    <string name="malformed_loc_error">Latitude or longitude setting isn\'t a number.</string>
    <string name="dialog_accept" translation_description="accepting the licence agreement">Accept</string>
    <string name="dialog_decline" translation_description="declining the licence agreement">No Thanks</string>
    <string name="dialog_ok_button">OK</string>
    <string name="menu_help" translation_description="menu item to show \'Help\' box">Help</string>
    <string name="help_dialog_title">Help for Sky Map</string>
    <string name="eula_dialog_title">End User License Agreement</string>
    <string name="set_manual">Switching to manual mode</string>
    <string name="set_auto">Switching to automatic mode</string>
    <string name="menu_zoom_in">Zoom in</string>
    <string name="menu_zoom_out">Zoom out</string>
    <string name="menu_toggle_dim">Toggle night mode</string>
    <string name="zenith">ZENITH</string>
    <string name="nadir">NADIR</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="search_label">Search the Sky</string>
    <string name="search_hint" translation_description="an example search target">e.g. Mars</string>
    <string name="no_search_title">No results</string>
    <string name="no_search_results_text">No results were found.</string>
    <string name="no_search_results_text2">No results were found. Perhaps the object is not
        visible at this time.</string>
    <string name="many_search_results_title">Did you mean?</string>
    <string name="many_search_results_text">Please select one</string>
    <string name="searching_for_text">Searching for %s...</string>
    <string name="found_target_text">Found %s.</string>
    <string name="other" translation_description="A preference category (ie preferences that don't belong in any other category)">Other</string>
    <string name="planetary_images">Show Planet Images</string>
    <string name="show_messier_images">Show Messier Images</string>
    <string name="show_messier_images_summary">Display Messier objects as galaxy icons instead of dots</string>
    <string name="menu_time">Time Travel</string>
    <string name="time_travel_start_message">Traveling through time ...</string>
    <string name="time_travel_start_message_alt">Traveling through time to %s ...</string>
    <string name="time_travel_close_message">Back to the present ...</string>
    <string name="popular_dates_prompt" translation_description="Label for a list of dates the user can choose from">Popular dates</string>
    <string name="custom_date_prompt" translation_description="Label telling the user to manually specify a date">Or select your own date:</string>
    <string name="change_date_prompt">Change the date</string>
    <string name="change_time_prompt">Change the time</string>
    <string name="now_visiting"
            translation_description="used in time travel dialog to tell the user what time they are visiting, time formatted as yyyy.mm.dd at hh.mm.ss + timezone">
        Now visiting: %s</string>
    <string name="time_travel_label_past" translation_description="Label showing that we are in the past">Time Travel: Past</string>
    <string name="time_travel_label_future" translation_description="Label showing that we are in the future">Time Travel: Future</string>
    <string name="time_travel_stopped" translation_description="Label showing rate of travel through time">Time travel frozen</string>
    <string name="time_travel_second_speed" translation_description="Label showing rate of travel through time.  The symbol means greater than.">Traveling &gt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 10 min/sec</string>
    <string name="time_travel_hour_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 hour/sec</string>
    <string name="time_travel_day_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 day/sec</string>
    <string name="time_travel_week_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 week/sec</string>
    <string name="time_travel_second_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 10 min/sec</string>
    <string name="use_sound_effects" translation_description="A preferences menu label">Enable sound</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tos">Terms of Service</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="enable_analytics">Send usage statistics</string>
    <string name="enable_analytics_desc">Make Sky Map better by sending anonymous data to Google Analytics</string>
    <string name="menu_calibrate">Calibrate</string>
    <string name="compass_calibration_activity_heading_compass">Compass -</string>
    <string name="compass_calibration_activity_do_not_show_this_again">Do not show this again</string>
    <string name="compass_calibration_activity_warning">Your compass may need to be
        calibrated</string>
    <string name="sensor_reverse_preference_title">Reverse Magnetic Z</string>
    <string name="sensor_reverse_preference_summary">Fix for phones with incorrectly implemented sensors - requires restart</string>
    <string name="disable_gyro_preference_title">Disable gyroscope</string>
    <string name="disable_gyro_preference_summary">Not all devices have a gyro - if yours does then you\'ll get better results with it enabled and this box unchecked.  On the other hand if your device does not have a gyro then Sky Map will probably not work if you uncheck this box.</string>
    <string name="rotate_horizon_preference_title">View direction</string>
    <string name="rotate_horizon_preference_summary">Rotate horizon by 90 degrees (for devices
        with forced landscape) or use pointer mode for the screen to show
        what the top of the phone is pointing at (see help text).</string>
</resources>