<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="stardroid.preferences">
    <Preference
        app:fragment="com.google.app:.stardroid.activities.EditSettingsActivity.LocationFragment"
        app:title="@string/location_prefs"
        app:key="location"/>
    <Preference
        app:key="sensor_prefs"
        app:title="@string/sensor_prefs" />
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="sound_effects"
        app:title="@string/use_sound_effects" />
    <!-- Keep in sync with value in utils.Analytics -->
    <SwitchPreferenceCompat
        app:defaultValue="@string/analytics_enabled"
        app:key="enable_analytics"
        app:summary="@string/enable_analytics_desc"
        app:title="@string/enable_analytics" />
</PreferenceScreen>
