<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.google.android.stardroid.activities.CompassCalibrationActivity">

        <WebView
            android:id="@+id/compass_calib_activity_webview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </WebView>

        <TextView
            android:id="@+id/compass_calib_activity_explain_why"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass_calibration_activity_warning"
            android:paddingTop="@dimen/calibration_top_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compass_calib_activity_webview" />

        <TextView
            android:id="@+id/compass_calib_activity_accuracy_lbl"
            style="?attr/textAppearanceSubtitle1"
            android:paddingTop="@dimen/calibration_top_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass_calibration_activity_heading_compass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compass_calib_activity_explain_why" />

        <TextView
            android:id="@+id/compass_calib_activity_compass_accuracy"
            style="?attr/textAppearanceSubtitle1"
            android:paddingTop="@dimen/calibration_top_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/calibration_spacer_padding"
            app:layout_constraintStart_toEndOf="@id/compass_calib_activity_accuracy_lbl"
            app:layout_constraintTop_toTopOf="@id/compass_calib_activity_accuracy_lbl"
            tools:text="accuracy: unknown" />

        <TextView
            android:id="@+id/compass_calib_what_to_do"
            style="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/calibration_top_padding"
            android:autoLink="web"
            tools:text="Your phone is reporting to Sky Map that its internal compass is uncalibrated. This is not a Sky Map issue but we can help you try to fix it. To calibrate the compass try moving your phone in a figure of eight motion as demonstrated in this video https://www.youtube.com/watch?v=-Uq7AmSAjt8 until the accuracy reads \'high\'."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compass_calib_activity_accuracy_lbl" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/compass_calib_activity_donotshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/calibration_left_padding"
            android:text="@string/compass_calibration_activity_do_not_show_this_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compass_calib_what_to_do" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/compass_calib_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:onClick="onOkClicked"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
